--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ sudo: false
 language: python
 cache: pip
 python:
-  - 2.6
-  - 2.7
   - 3.3
   - 3.4
   - 3.5
   - 3.6
   - pypy
+before_script: "pip install -r dev-requirements.txt"
 install: "pip install -r requirements.txt"
 script: "python setup.py test"
