--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - 3.4
   - 3.5
   - 3.6
-before_script: "pip install -r dev-requirements.txt"
-install: "pip install -r requirements.txt"
-script: "python setup.py test"
+  - 3.7
+before_script: "pip install -r requirements.txt"
+script: "python manage.py test"
