--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ cache: pip
 python:
   - 3.7
 before_script: "pip install -r requirements.txt"
-script: "python manage.py test"
+script:
+  - "python manage.py test"
+  - "python manage.py lint"
